Fixed arrow cutout and margin on navbar on mobile

--- a/style.css
+++ b/style.css
@@ -157,7 +157,7 @@ a:hover{
       transform: translateX(0);
       left: 0;
       padding: 0;
-      margin: 20% 0 0 0;
+      margin: 50% 0 0 0;
       width: 100%;
    }
    .custom-nav a{
@@ -209,7 +209,7 @@ a:hover{
    background-color: transparent;
    background-image: url('/Images/Scroll\ up.png');
    background-repeat: no-repeat;
-   background-size: cover;
+   background-size: contain;
    background-position: center;
  }
 
